# test_pyauto

./: LICENSE  README.md
test_app/: pyproject.toml
test_app/test_app/: main.py
